--- a/web/Styles.css
+++ b/web/Styles.css
@@ -6,6 +6,11 @@
     margin-top: -25px;
 }
 
+body .animate   {
+    width: 400px;
+    height:400px;
+}
+
 input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
@@ -70,7 +75,7 @@ span.register {
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    padding-top: 60px;
+    padding-top: -30px;
 }
 
 /* Modal Content/Box */
